add_library(UCSO_API SHARED
    CustomCargoAPI.cpp
    CustomCargo.cpp
    VesselAPI.cpp
)

target_include_directories(UCSO_API PUBLIC
	${ORBITER_SOURCE_SDK_INCLUDE_DIR}
)

target_link_libraries(UCSO_API
	${ORBITER_SDK_LIB}
)

set_target_properties(UCSO_API
	PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${ORBITER_BINARY_MODULE_DIR}/UCSO
	OUTPUT_NAME UCSO_API
)

install(TARGETS UCSO_API
#	RUNTIME
	DESTINATION ${ORBITER_INSTALL_MODULE_DIR}/UCSO
)

add_custom_command(TARGET UCSO_API
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E make_directory ${ORBITER_BINARY_SDK_DIR}/include/
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/CustomCargo.h ${ORBITER_BINARY_SDK_DIR}/include/
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/CustomCargoAPI.h ${ORBITER_BINARY_SDK_DIR}/include/UCSO
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Helper.h ${ORBITER_BINARY_SDK_DIR}/include/UCSO
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Vessel.h ${ORBITER_BINARY_SDK_DIR}/include/UCSO
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/VesselAPI.h ${ORBITER_BINARY_SDK_DIR}/include/UCSO
)
